third_party/move/move-compiler-v2/tests/more-v1/expansion/hexstring_bad_value.exp

Diagnostics:
error: invalid hex string
  ┌─ tests/more-v1/expansion/hexstring_bad_value.move:3:11
  │
3 │         x"g0"
  │           ^ Invalid hexadecimal character: 'g'

error: invalid hex string
  ┌─ tests/more-v1/expansion/hexstring_bad_value.move:6:9
  │
6 │         x"123"
  │         ^^^^^^ Odd number of characters in hex string. Expected 2 hexadecimal digits for each byte
